# LLMVAD

./: .env.example  .gitignore  README.md  anomaly_detector.py  anomaly_judge.py  config.py  download_dataset.ps1  enums.py  eval.py  evaluation_stats.py  gemini_handler.py  gemma_client.py  hf_auth.py  llm_handler.py  logging_config.py  main.py  old_main.py  ollama_client.py  plotting.py  prompts.py  pyproject.toml  requirements.txt  statistics.py  utils.py  video_processor.py
.hf_cache/: token_cache.json
GeminiAPI/: README.md  anomaly_detector.py  config.py  gemini_client.py  video_processor.py
HuggingFaceAPI/: README.md  __init__.py  anomaly_detector.py  config.py  gemma_client.py  hf_auth.py  video_processor.py
cache/: A.Beautiful.Mind.2001__00-01-45_00-02-50_label_A_0dd923d3.joblib  A.Beautiful.Mind.2001__00-03-00_00-04-05_label_A_0dd923d3.joblib  A.Beautiful.Mind.2001__00-04-20_00-05-35_label_A_0dd923d3.joblib  A.Beautiful.Mind.2001__00-05-52_00-08-22_label_A_0dd923d3.joblib  A.Beautiful.Mind.2001__00-08-55_00-10-50_label_A_0dd923d3.joblib  A.Beautiful.Mind.2001__00-16-18_00-17-09_label_A_0dd923d3.joblib  A.Beautiful.Mind.2001__00-20-35_00-23-06_label_A_0dd923d3.joblib  A.Beautiful.Mind.2001__00-23-50_00-24-31_label_A_0dd923d3.joblib  A.Beautiful.Mind.2001__00-31-05_00-32-05_label_A_0dd923d3.joblib  A.Beautiful.Mind.2001__00-32-07_00-36-45_label_A_0dd923d3.joblib  A.Beautiful.Mind.2001__00-37-40_00-40-31_label_A_0dd923d3.joblib  A.Beautiful.Mind.2001__00-42-52_00-45-31_label_A_0dd923d3.joblib  A.Beautiful.Mind.2001__00-45-40_00-47-30_label_A_0dd923d3.joblib  A.Beautiful.Mind.2001__00-57-20_00-58-17_label_A_0dd923d3.joblib  A.Beautiful.Mind.2001__00-58-18_01-02-30_label_A_0dd923d3.joblib  A.Beautiful.Mind.2001__01-21-22_01-25-40_label_A_0dd923d3.joblib  A.Beautiful.Mind.2001__01-26-10_01-28-00_label_A_0dd923d3.joblib  A.Beautiful.Mind.2001__01-29-31_01-31-00_label_A_0dd923d3.joblib  A.Beautiful.Mind.2001__01-39-05_01-41-00_label_A_0dd923d3.joblib  A.Beautiful.Mind.2001__01-42-06_01-45-53_label_A_0dd923d3.joblib  A.Beautiful.Mind.2001__01-46-20_01-48-10_label_A_0dd923d3.joblib  A.Beautiful.Mind.2001__01-50-50_01-52-00_label_A_0dd923d3.joblib  A.Beautiful.Mind.2001__01-52-20_01-58-00_label_A_0dd923d3.joblib  A.Beautiful.Mind.2001__01-58-20_02-05-00_label_A_0dd923d3.joblib  About.Time.2013__00-01-45_00-02-15_label_A_0dd923d3.joblib  About.Time.2013__00-04-20_00-05-35_label_A_0dd923d3.joblib  About.Time.2013__00-05-52_00-08-22_label_A_0dd923d3.joblib  About.Time.2013__00-08-55_00-10-50_label_A_0dd923d3.joblib  About.Time.2013__00-11-00_00-15-08_label_A_0dd923d3.joblib  About.Time.2013__00-16-18_00-17-27_label_A_0dd923d3.joblib  About.Time.2013__00-17-30_00-19-10_label_A_0dd923d3.joblib  About.Time.2013__00-20-35_00-23-06_label_A_0dd923d3.joblib  About.Time.2013__00-25-20_00-29-40_label_A_0dd923d3.joblib  About.Time.2013__00-33-52_00-38-31_label_A_0dd923d3.joblib  About.Time.2013__00-38-52_00-40-31_label_A_0dd923d3.joblib  About.Time.2013__00-42-52_00-45-31_label_A_0dd923d3.joblib  About.Time.2013__00-45-40_00-47-30_label_A_0dd923d3.joblib  About.Time.2013__00-49-48_00-51-12_label_A_0dd923d3.joblib  About.Time.2013__00-51-55_00-55-16_label_A_0dd923d3.joblib  About.Time.2013__00-56-40_01-02-02_label_A_0dd923d3.joblib  (+160 more)
scripts/: README.md  datasets_config.yaml  download_data.py  download_dataset.ps1  download_dataset.sh
tests/: __init__.py  conftest.py  run_all_tests.sh  test_llm_handlers.py
